# handoff-tax-experiment

./: .env.example  .gitignore  README.md  last_err.txt  pyproject.toml
briefs/: credit_hold_release.yaml
notebooks/: analysis.ipynb
schemas/: process.schema.json
scripts/: analyse.py  dry_run.py
src/anselm_experiment/: __init__.py  checker.py  llm.py  metrics.py  runner.py
src/anselm_experiment/architectures/: __init__.py  iter_agent.py  multi_pipe.py  multi_vote.py  multi_vote_over_pipe.py  prompts.py
